<resources>

    <!-- InstructionsView -->
    <string name="app_name">TRIGGR</string>
    <string name="welcome_text">Welcome</string>
    <string name="download_desktop_app_instructions">Install the TRIGGR desktop app at</string>
    <string name="website_name">www.triggrapp.com</string>
    <string name="pairing_desktop_instructions">Show your desktop\'s Pair Key.</string>
    <string name="pairing_mobile_instructions">Enter the Pair Key into the TRIGGR Android app.</string>
    <string name="pairing_connect_instructions">Click "Connect".</string>
    <string name="thanks_for_using">Thanks for using TRIGGR! Please share the app to extend the trial to 30 days!</string>
    <string name="feedback_instructions">We encourage your feedback.</string>
    <string name="rate_instructions">Please rate us!</string>
    <string name="get_started">GET STARTED</string>

    <!-- PairingView -->
    <string name="pairing_prompt">Enter the Pair Key displayed on the desktop app.</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected.</string>

    <!-- Sharing -->
    <string name="full_website_url">http://www.triggrapp.com</string>
    <string name="sharing_desc">Check out TRIGGR!</string>

    <!-- Image Descriptions -->
    <string name="leftArrowContentDesc">Left Nav Arrow</string>
    <string name="rightArrowContentDesc">Right Nav Arrow</string>
    <string name="laptopContentDesc">Laptop</string>
    <string name="desktopAppContentDesc">Desktop App View</string>
    <string name="mobileAppContentDesc">Mobile App View</string>


    <!-- Settings -->
    <string name="desktop_notifications_title">Desktop Notifications</string>

    <string name="phone_call_notifications_pref_title">Phone Call</string>
    <string name="phone_call_notifications_pref_desc">Incoming and outgoing phone calls.</string>

    <string name="text_message_notifications_pref_title">Text Message</string>
    <string name="text_message_notifications_pref_desc">Incoming text messages.</string>

    <string name="whatsapp_notifications_pref_title">WhatsApp</string>
    <string name="whatsapp_notifications_pref_desc">Incoming WhatsApp messages.</string>

    <string name="snapchat_notifications_pref_title">SnapChat</string>
    <string name="snapchat_notifications_pref_desc">Incoming SnapChat messages.</string>


    <string name="reactions_title">Reactions</string>

    <string name="smart_volume_pref_title">Smart Volume</string>
    <string name="smart_volume_pref_desc">Automatically lower computer volume during call events.</string>

    <string name="noise_alert_pref_title">Noise Alerts</string>
    <string name="noise_alert_pref_desc">Make a noise on your computer when receiving a notification.</string>

    <string name="purchase_notification_desc">Purchase for just</string>
    <string name="purchase_notification_confirm_whatsapp">Purchase WhatsApp notifications for</string>
    <string name="purchase_notification_confirm_snapchat">Purchase SnapChat notifications for</string>

    <string name="purchase_whatsapp_notifications_desktop_message">WhatsApp Notifications Purchased</string>
    <string name="purchase_snapchat_notifications_desktop_message">Snapchat Notifications Purchased</string>

    <string name="enable_accessibility_service_title">Enable Accessibility</string>
    <string name="enable_accessibility_service_message">To use advanced notifications, the Triggr accessibility service must be turned on. Press \'Ok\' to go to the Accessibility Settings.</string>

    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="buy_text">Buy Now!</string>

    <!-- Notifications -->
    <string name="unknown_contact">Unknown Contact</string>
    <string name="new_message">New Message</string>
    <string name="connected_notification">Connected</string>
    <string name="disconnected_notification">Disconnected</string>
    <string name="missed_call_notification">Missed Call</string>
    <string name="end_call_notification">Ended Call</string>
    <string name="new_whatsapp_notification">New WhatsApp Message</string>
    <string name="new_snapchat_notification">New SnapChat Message</string>

    <!-- Trial -->
    <string name="alerts_unavailable">Trial Expired</string>
    <string name="buy_full_version">Click here to buy the full version</string>

</resources>
